--- a/TCGA_steps_explained.ipynb
+++ b/TCGA_steps_explained.ipynb
@@ -5,36 +5,74 @@
    "metadata": {},
    "source": [
     "# Handling TCGA data\n",
+    "### Overall goals\n",
+    "- Work with TCGA data (e.g. of a specific study or primary site)\n",
+    "- Downoad data (or further data after a while)\n",
+    "- Only download data matching specific cases\n",
+    "\n",
     "### Filtering and selecting TCGA data\n",
     "- Go to: https://portal.gdc.cancer.gov/analysis_page\n",
     "- Click on \"Repository\"\n",
     "\n",
-    "<!---<center><img src=\"figures/tcga_gdc_repository.png\" style=\"width:1000px\"></center>--->\n",
-    "<img src=\"figures/tcga_gdc_repository.png\" style=\"width:1000px\">\n",
+    "<img src=\"figures/tcga_gdc_repository.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
+    "<p></p>\n",
+    "<img src=\"figures/tcga_gdc_repository_files.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
-    "- Filter for the relevant criteria\n",
-    "    - By files:\n",
-    "    - By cases:\n",
+    "- Filter by files:\n",
+    "    - Experimental strategy\n",
+    "    - Data type\n",
+    "    - Data format\n",
+    "    - Access\n",
+    "    - ...\n",
+    "\n",
+    "<img src=\"figures/tcga_gdc_files_filter.png\" style=\"width:300px; position: relative; left: 40px\">\n",
+    "\n",
+    "- Filter by cases:\n",
+    "    - Primary site\n",
+    "    - Disease Type\n",
+    "    - Project\n",
+    "    - Gender\n",
+    "    - ...\n",
+    "\n",
+    "<img src=\"figures/tcga_gdc_cases_filter.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
     "- Select associated files or put all relevant data into the cart\n",
     "\n",
+    "<img src=\"figures/tcga_gdc_select_file_cart.png\" style=\"width:800px; position: relative; left: 40px\">\n",
+    "\n",
     "- Click on the Cart symbol\n",
+    "\n",
+    "<img src=\"figures/tcga_gdc_cart_overview.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
+    "\n",
     "- Download the Sample Sheet, Metadata, Clinical: TSV data for additional information\n",
+    "\n",
+    "<img src=\"figures/tcga_gdc_cart_ass_data.png\" style=\"width:180px; position: relative; left: 40px\">\n",
+    "\n",
     "- Download the Manifest for a data download with the gdc-client tool\n",
     "\n",
+    "<img src=\"figures/tcga_gdc_cart_manifest.png\" style=\"width:120px; position: relative; left: 40px\">\n",
     "\n",
-    "### Combine file IDs and case IDs\n",
-    "- in manifest only id, filename with 36 different characters\n",
-    "- \n",
+    "- Do these steps every time for your new analyses, also when you later on have new aspects or file types to consider\n",
     "\n",
     "\n",
-    "### Filter relevant files in other bigger manifest file\n",
-    "- \n",
     "\n",
+    "### Combine manifest with sample sheet, filter for relevant files\n",
+    "- manifest file\n",
+    "\n",
+    "<img src=\"figures/tcga_manifest_file_example.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
+    "\n",
+    "- sample sheet\n",
+    "\n",
+    "<img src=\"figures/tcga_sample_sheet_example.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
+    "\n",
+    "- merge manifest and sample sheet\n",
+    "- if previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
+    "- create adapted filtered manifest file for gdc-client download\n",
     "\n",
     "### Download TCGA data via a manifest document and the GDC-client tool\n",
-    "- Login at NIH for restricted access files\n",
-    "- Download access token, save as secured file\n",
+    "- For restricted access files:\n",
+    "    - Login at NIH for restricted access files\n",
+    "    - Download access token, save as secured file\n",
     "- Download gdc-client tool\n",
     "\n",
     "```\n",
@@ -42,8 +80,12 @@
     "```\n",
     "\n",
     "### Rename the downloaded files as case_id.file_suffix\n",
-    "- \n",
-    "\n"
+    "- in manifest only id, filename with 36 different characters\n",
+    "- take merged manifest and sample sheet\n",
+    "- rename downloaded files and put them in new folders for each analysis\n",
+    "\n",
+    "### Analyze files\n",
+    "- with Snakemake pipeline\n"
    ]
   },
   {
@@ -69,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Download TCGA data with TCGA manifest 2024-04-08_gdc_manifest_star_counts_lusc_prior.txt without TCGA user token\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
