--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -17,12 +17,13 @@
     "\n",
     "### Combine manifest with sample sheet, filter for relevant files\n",
     "- Adapt the data/config.yaml\n",
-    "- manifest files"
+    "- manifest \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,20 @@
     "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/prior_sample_sheets/'+i) for i in config_file['sample_sheets_prior']]\n",
     "sample_sheets_merge = pd.concat(sample_sheets)\n",
     "\n",
-    "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n"
+    "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
+    "\n",
+    "# if filtering of manifest file on case IDs of previous sample sheet is wanted\n",
+    "sample_sheet_filtering = config_file['sample_sheet_filtering']\n",
+    "\n",
+    "if sample_sheet_filtering != False:\n",
+    "    sample_sheet_filter = pd.read_table(analysis_path+'sample_sheets/'+sample_sheet_filtering)\n",
+    "    case_ids = list(sample_sheet_filter['Case ID'].unique())\n",
+    "    filtered_manifest = manifests_merge[(manifests_merge['Case ID'].isin(case_ids))&(manifests_merge['Sample Type']=='Primary Tumor')].copy().reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "star_counts_sample_sheet.to_csv('sample_sheets/prior_sample_sheets/2024-04-08_gdc_sample_sheet_star_counts_lusc.tsv')"
    ]
   },
   {
@@ -55,6 +69,38 @@
     "- merge manifest and sample sheet\n",
     "- if previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
     "- create adapted filtered manifest file for gdc-client download"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename the downloaded files as case_id.file_suffix\n",
+    "- in manifest only id, filename with 36 different characters\n",
+    "- take merged manifest and sample sheet\n",
+    "- rename downloaded files and put them in new folders for each analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# categorize samples for their analysis method\n",
+    "method_dict = {'BRASS':'BRASS', 'CaVEMan':'CaVEMan', 'ASCAT':'CNV_segment', 'pindel':'Pindel', 'star_splice':'Splicing', \n",
+    "               'star_gene_counts':'STAR_counts'}\n",
+    "\n",
+    "sample_sheets_merge['Folder'] = ''\n",
+    "\n",
+    "for met in method_dict.keys():\n",
+    "    sample_sheets_merge.loc[sample_sheets_merge['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
+    "\n",
+    "# 36 characters file ID\n",
+    "sample_sheets_merge['File Suffix'] = sample_sheets_merge['File Name'].str[36:]\n",
+    "\n",
+    "sample_sheets_merge['Path_raw'] = analysis_path+'00_raw_data/'+sample_sheets_merge['File ID']+'/'+sample_sheets_merge['File Name']\n",
+    "sample_sheets_merge['Path_sample'] = analysis_path+'01_sample_data/'+sample_sheets_merge['Folder']+'/'+sample_sheets_merge['Case ID']+sample_sheets_merge['File Suffix']"
    ]
   },
   {
@@ -216,40 +262,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rename the downloaded files as case_id.file_suffix\n",
-    "- in manifest only id, filename with 36 different characters\n",
-    "- take merged manifest and sample sheet\n",
-    "- rename downloaded files and put them in new folders for each analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# categorize samples for their analysis method\n",
-    "method_dict = {'BRASS':'BRASS', 'CaVEMan':'CaVEMan', 'ASCAT':'CNV_segment', 'pindel':'Pindel', 'star_splice':'Splicing', \n",
-    "               'star_gene_counts':'STAR_counts'}\n",
-    "\n",
-    "sample_sheets_merge['Folder'] = ''\n",
-    "\n",
-    "for met in method_dict.keys():\n",
-    "    sample_sheets_merge.loc[sample_sheets_merge['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
-    "\n",
-    "sample_sheets_merge['File Suffix'] = sample_sheets_merge['File Name'].str.split('.', expand=True)[1]\n",
-    "\n",
-    "sample_sheets_merge['Path_raw'] = analysis_path+'00_raw_data/'+sample_sheets_merge['Folder']+'/'+sample_sheets_merge['File ID']+'/'+sample_sheets_merge['File Name']\n",
-    "sample_sheets_merge['Path_sample'] = analysis_path+'01_sample_data/'+sample_sheets_merge['Folder']+'/'+sample_sheets_merge['Case ID']+'.'+sample_sheets_merge['File Suffix']\n",
+    "### Rename file names with symlinks\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "with open('data/config.yaml', 'r') as streamfile:\n",
+    "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
+    "\n",
+    "analysis_path = config_file['analysis_path']\n",
+    "os.makedirs(analysis_path+'01_sample_data', exist_ok=True)\n",
+    "\n",
+    "downloaded_manifests = config_file['manifest_for_download']\n",
+    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests/'+i) for i in downloaded_manifests])\n",
+    "downloaded_manifests = downloaded_manifests.rename(columns={'id':'File ID', 'filename':'File Name'})\n",
+    "\n",
+    "# merge with executed manifest file(s) on executed manifest files\n",
+    "downloaded_manifests = downloaded_manifests.merge(sample_sheets_merge, how='left', on=['File ID', 'File Name'])\n",
+    "\n",
+    "# create folders for methods\n",
+    "methods = list(downloaded_manifests['Folder'].unique())\n",
+    "for m in methods:\n",
+    "    os.makedirs(analysis_path+'01_sample_data/'+m, exist_ok=True)\n",
+    "\n",
+    "# create symlinks for samples to categorize them in \n",
+    "for raw_path, sample_path in zip(list(downloaded_manifests['Path_raw']), list(downloaded_manifests['Path_sample'])):\n",
+    "    try:\n",
+    "        os.symlink(raw_path, sample_path)\n",
+    "    except FileExistsError:\n",
+    "        print(sample_path.split('/')[-1] + ' already exists.')\n",
+    "    except FileNotFoundError:\n",
+    "        print(sample_path.split('/')[-1] + ' not found.')\n"
+   ]
   },
   {
    "cell_type": "markdown",
