Config file check, download manifest adapted

--- a/TCGA_steps_explained.ipynb
+++ b/TCGA_steps_explained.ipynb
@@ -55,6 +55,20 @@
     "- Do these steps every time for your new analyses, also when you later on have new aspects or file types to consider\n",
     "\n",
     "\n",
+    "### File locations for manifests and sample sheets\n",
+    "- Create an analysis folder and in this folder, a \"sample_sheets\" folder with sub-folders \"clinical_data\", \"manifests\", and \"sample_sheets_prior\"\n",
+    "\n",
+    "<analysis_path>\n",
+    "\n",
+    "└── sample_sheets\n",
+    "<br>\n",
+    "&emsp;&emsp;├── clinical_data\n",
+    "<br>\n",
+    "&emsp;&emsp;├── manifests\n",
+    "<br>\n",
+    "&emsp;&emsp;└── sample_sheets_prior    \n",
+    "\n",
+    "\n",
     "\n",
     "### Combine manifest with sample sheet, filter for relevant files\n",
     "- manifest file\n",
@@ -89,18 +103,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "└── sample_sheets\n",
+      "    ├── clinical_data\n",
+      "    ├── manifests\n",
+      "    └── sample_sheets_prior\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('└── sample_sheets')\n",
+    "print('    ├── clinical_data')\n",
+    "print('    ├── manifests')\n",
+    "print('    └── sample_sheets_prior')"
+   ]
   },
   {
    "cell_type": "markdown",
