--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -13,13 +13,99 @@
     "### Filtering and selecting TCGA data\n",
     "- Filter and select TCGA data from the TCGA GDC data portal as explained in \"TCGA_steps_explained.ipynb\"\n",
     "- Do these steps every time for your new analyses, also when you later on have new aspects or file types to consider\n",
-    "- Create a folder called \"sample_sheets\" in your analysis path, create the folders \"manifests\" and \"prior_sample_sheets\" in the \"sample_sheets\" folder\n",
+    "- Create a folder called \"sample_sheets\" in your analysis path, create the folders \"manifests\" and \"sample_sheets_prior\" in the \"sample_sheets\" folder\n",
     "\n",
     "### Combine manifest with sample sheet, filter for relevant files\n",
     "- Adapt the data/config.yaml\n",
     "- manifest \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check validity of important configuration file entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check validity of important configuration file entries\n",
+    "import yaml\n",
+    "import os\n",
+    "import subprocess\n",
+    "import shlex\n",
+    "\n",
+    "with open('data/config.yaml', 'r') as streamfile:\n",
+    "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
+    "\n",
+    "# Check analysis path\n",
+    "analysis_path = config_file['analysis_path']\n",
+    "# if analysis_path is valid\n",
+    "if not os.path.exists(analysis_path):\n",
+    "    print('Please make sure the analysis path exists and includes the manifest files. Your current analysis path is the following:')\n",
+    "    print(analysis_path)\n",
+    "else:\n",
+    "    # if analysis_path has \"/\" at the end\n",
+    "    if analysis_path[-1] != '/':\n",
+    "        analysis_path = analysis_path+'/'\n",
+    "        change_config_cmd = f\"sed -i '/^analysis_path: .*/s/$/\\//' data/config.yaml\"\n",
+    "        subprocess.run(shlex.split(change_config_cmd))\n",
+    "    # if sample sheet and manifests folders exist\n",
+    "    if not os.path.exists(analysis_path+'sample_sheets/manifests') or not os.path.exists(analysis_path+'sample_sheets/sample_sheets_prior'):\n",
+    "        print('Please make sure the paths sample_sheets/manifests and sample_sheets/sample_sheets_prior exist in your analysis folder.')\n",
+    "    else:\n",
+    "        # if files in manifest and sample sheet folders exist\n",
+    "        manifests_prior = config_file['manifests_prior']\n",
+    "        sample_sheets_prior = config_file['sample_sheets_prior']\n",
+    "\n",
+    "        for category_list, category_name in zip([manifests_prior, sample_sheets_prior], ['manifests', 'sample_sheets_prior']):\n",
+    "            for check_file in category_list:\n",
+    "                if not os.path.isfile(analysis_path+f'sample_sheets/{category_name}/'+check_file):\n",
+    "                    print(f'{check_file} ist not existent. Please check again.')\n",
+    "                else:\n",
+    "                    continue\n",
+    "        \n",
+    "        # if sample sheet for filtering is existent\n",
+    "        sample_sheet_filtering = config_file['sample_sheet_filtering']\n",
+    "\n",
+    "        if sample_sheet_filtering != False:\n",
+    "            if not os.path.isfile(sample_sheet_filtering):\n",
+    "                print(f'{sample_sheet_filtering} is not existent. Please check again or input: False')\n",
+    "        \n",
+    "        # if manifest for download is existent\n",
+    "        manifest_for_download = config_file['manifest_for_download']\n",
+    "\n",
+    "        if manifest_for_download != False:\n",
+    "            for check_file in manifest_for_download:\n",
+    "                if not os.path.isfile(analysis_path+f'sample_sheets/manifests/'+check_file):\n",
+    "                    print(f'{check_file} is not existent. Please check again or input: False')\n",
+    "\n",
+    "# Check if TCGA user token file is existent\n",
+    "tcga_user_token_file = config_file['tcga_user_token_file']\n",
+    "if tcga_user_token_file != False:\n",
+    "    if not os.path.isfile(tcga_user_token_file):\n",
+    "        print(f'User token file not existent. Please check again. Your current analysis path is the following:')\n",
+    "        print(tcga_user_token_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -29,7 +115,6 @@
    "source": [
     "import pandas as pd\n",
     "import yaml\n",
-    "import os\n",
     "\n",
     "# load config file\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
@@ -43,7 +128,7 @@
     "manifests_merge = pd.concat(manifests)\n",
     "\n",
     "# original (prior) sample sheets, merge them\n",
-    "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/prior_sample_sheets/'+i) for i in config_file['sample_sheets_prior']]\n",
+    "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/sample_sheets_prior/'+i) for i in config_file['sample_sheets_prior']]\n",
     "sample_sheets_merge = pd.concat(sample_sheets)\n",
     "\n",
     "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
@@ -56,10 +141,12 @@
     "    case_ids = list(sample_sheet_filter['Case ID'].unique())\n",
     "    filtered_manifest = manifests_merge[(manifests_merge['Case ID'].isin(case_ids))&(manifests_merge['Sample Type']=='Primary Tumor')].copy().reset_index(drop=True)\n",
     "\n",
+    "    filtered_manifest.to_csv(analysis_path+'sample_sheets/manifests/'+manifest)\n",
     "\n",
     "\n",
     "\n",
-    "star_counts_sample_sheet.to_csv('sample_sheets/prior_sample_sheets/2024-04-08_gdc_sample_sheet_star_counts_lusc.tsv')"
+    "\n",
+    "star_counts_sample_sheet.to_csv('sample_sheets/sample_sheets_prior/2024-04-08_gdc_sample_sheet_star_counts_lusc.tsv')"
    ]
   },
   {
@@ -198,6 +285,30 @@
     "    return manifest_for_download\n",
     "\n",
     "\n",
+    "# Check whether files in manifest have already been downloaded an exclude them from the manifest\n",
+    "def Check_Already_Downloaded():\n",
+    "    with open('data/config.yaml', 'r') as streamfile:\n",
+    "        config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
+    "    \n",
+    "    analysis_path = config_file['analysis_path']\n",
+    "    \n",
+    "    manifest_for_download_prior = Create_Manifest_Download_List()\n",
+    "\n",
+    "    manifest_for_download = []\n",
+    "\n",
+    "    if manifest_for_download_prior != False:\n",
+    "        for manifest_file in manifest_for_download_prior:\n",
+    "            manifest = pd.read_table(manifest_file).drop_duplicates()\n",
+    "            manifest['file_path'] = analysis_path + '00_raw_data/' + manifest['id'] + '/' + manifest['filename']\n",
+    "            manifest['is_file'] = manifest['file_path'].apply(os.path.isfile)\n",
+    "            manifest2 = manifest[manifest['is_file']==False].copy()\n",
+    "            manifest_file_name_2 = manifest_file.rsplit('.', 1)[0] + '_check' + manifest_file.rsplit('.', 1)[1]\n",
+    "            manifest2.to_csv(manifest_file_name_2)\n",
+    "            manifest_for_download.append(manifest_file_name_2)\n",
+    "    \n",
+    "    return manifest_for_download\n",
+    "\n",
+    "\n",
     "# Download the gdc-client in a new conda environment and run the gdc-client, if accepted\n",
     "def Download_gdc_client():\n",
     "    with open('data/config.yaml', 'r') as streamfile:\n",
@@ -236,7 +347,7 @@
     "\n",
     "    os.makedirs(raw_data_path, exist_ok=True)\n",
     "\n",
-    "    manifest_for_download = Create_Manifest_Download_List()\n",
+    "    manifest_for_download = Check_Already_Downloaded()\n",
     "\n",
     "    name_conda_gdc_env = Download_gdc_client()\n",
     "\n",
