--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -15,10 +15,7 @@
     "- Do these steps every time for your new analyses, also when you later on have new aspects or file types to consider\n",
     "- Create a folder called \"sample_sheets\" in your analysis path, create the folders \"manifests\" and \"sample_sheets_prior\" in the \"sample_sheets\" folder\n",
     "\n",
-    "### Combine manifest with sample sheet, filter for relevant files\n",
-    "- Adapt the data/config.yaml\n",
-    "- manifest \n",
-    "\n"
+    "- Adapt the data/config.yaml"
    ]
   },
   {
@@ -89,23 +86,18 @@
     "tcga_user_token_file = config_file['tcga_user_token_file']\n",
     "if tcga_user_token_file != False:\n",
     "    if not os.path.isfile(tcga_user_token_file):\n",
-    "        print(f'User token file not existent. Please check again. Your current analysis path is the following:')\n",
+    "        print(f'User token file not existent, please check again or if you do not want to use one, input: False. Your current analysis path is the following:')\n",
     "        print(tcga_user_token_file)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Combine manifest with sample sheet, filter for relevant files\n",
+    "- Adapt the data/config.yaml\n",
+    "- manifest "
+   ]
   },
   {
    "cell_type": "code",
@@ -385,6 +377,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import yaml\n",
     "\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
     "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
@@ -427,7 +420,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import subprocess\n",
+    "import yaml\n",
+    "import shlex\n",
+    "\n",
+    "with open('data/config.yaml', 'r') as streamfile:\n",
+    "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
+    "\n",
+    "conda_snakemake = config_file['conda_snakemake']\n",
+    "snakemake_threads = config_file['snakemake_threads']\n",
+    "\n",
+    "# run Snakemake pipeline\n",
+    "command_snakemake = f'conda run -n {conda_snakemake} snakemake --codes {snakemake_threads} --use-conda'\n",
+    "process_snakemake = subprocess.Popen(command_snakemake, shell=True)\n",
+    "process_snakemake.wait()\n"
+   ]
   }
  ],
  "metadata": {
